--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,35 @@
-body {
-    background: red;
+html {
+    height: 100%;
+    background-image: url('https://images.unsplash.com/photo-1534088568595-a066f410bcda?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjk0NTY1fQ');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.main {
+    &__header {}
+
+    &__body {}
+
+    &__footer {}
+
+    .body {
+        &__wrapper {
+
+            .weather__info {
+                &--city {
+                    color: #fff;
+                    font-size: 50px;
+                    font-weight: bold;
+                }
+
+                &--data {}
+            }
+
+            &--today-data {}
+
+            &--week-data {}
+        }
+
+    }
+
 }
