--- a/src/scss/aplication.scss
+++ b/src/scss/aplication.scss
@@ -87,7 +87,6 @@ html {
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
-                                width: 250px;
 
                                 &--degree {
                                     color: #fff;
@@ -100,16 +99,17 @@ html {
                                 margin-top: 50px;
                                 display: flex;
                                 flex-direction: column;
+                                justify-content: baseline;
+                                align-items: flex-end;
                                 width: 100%;
+                                padding-right: 50px;
                             }
                             &__header {
                                 display: flex;
-                                width: 100%;
 
                                 .today-data-details {
                                     display: flex;
                                     color: #fff;
-                                    margin-left: 150px;
                                     height: 20px;
                                     font-size: 20px;
 
@@ -149,7 +149,6 @@ html {
                                 .today-data-details {
                                     display: flex;
                                     color: #fff;
-                                    margin-left: 150px;
                                     height: 20px;
                                     font-size: 18px;
     
@@ -210,6 +209,7 @@ html {
                             &--wrapper {
                                 display: flex;
                                 flex-direction: column;
+                                width: 100%;
                                 height: 100%;
                             }
 
@@ -239,7 +239,9 @@ html {
                                     align-items: center;
                                 }
                                 &--icon {
-
+                                    display: flex;
+                                    align-items: center;
+                                
                                 }
                             }
                             &__footer {
