--- a/src/scss/modal/settings.scss
+++ b/src/scss/modal/settings.scss
@@ -35,6 +35,9 @@
             }
             &__input {
 
+                input {
+                    text-align: right;
+                }
             }
         }
         .dropdown {
