--- a/src/scss/aplication.scss
+++ b/src/scss/aplication.scss
@@ -1,5 +1,5 @@
 html {
-    background-image: url('../src/img/background.jpg');
+    background-image: url('../img/background.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
