--- a/index.hbs
+++ b/index.hbs
@@ -55,10 +55,10 @@
                     <div class="today-data-details">
                       <div class="today-data-details--pressure"><i class="fas fa-compress"></i> Pressure</div>
                       <div class="today-data-details--wind-degree"><img class="icon"
-                          src="./public/img/wind-deg-icon.png">Wind deg.</div>
+                          src="./img/wind-deg-icon.png">Wind deg.</div>
                       <div class="today-data-details--sunrise"><img class="icon"
-                          src="./public/img/sunrise-icon.png">Sunrise</div>
-                      <div class="today-data-details--sunset"><img class="icon" src="./public/img/sunset-icon.png">Sunset
+                          src="./img/sunrise-icon.png">Sunrise</div>
+                      <div class="today-data-details--sunset"><img class="icon" src="./img/sunset-icon.png">Sunset
                       </div>
                     </div>
                   </div>
